mini_service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework1-deployment
  labels:
    app: homework1-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: homework1-app
  template:
    metadata:
      labels:
        app: homework1-app
    spec:
      containers:
        - name: homework1
          image: gamma86/homework1:2
          ports:
            - containerPort: 8000
