mini_service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework1-service
spec:
  selector:
    app: homework1-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
